--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!--Header-->
-    <header class="p-3 bg-primary text-dark">
+    <header class="p-3 bg-secondary text-dark">
       <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
        
