--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/headers.css">
 
-    <!--Custom link-->
-    <link rel="stylesheet" href="bootstrap/headers.css">
     <title>Hello, World!</title>
   </head>
   <body>
@@ -76,7 +74,7 @@
           </div>
         </div>
         <div class="col-md-3 mt-2">
-          <small>Alumni</small>
+          <small>Alumnii</small>
           <div class="card shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="90%" height="550" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Pictures</text></svg>
     
@@ -91,5 +89,6 @@
         <!--Grid 3-->
       </div>
     </div>
+
   </body>
 </html>
