--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="#" class="nav-link px-2 text-white">Home</a></li>
             <li><a href="#" class="nav-link px-2 text-white">About</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Q&A</a></li>
+            <li><a href="#" class="nav-link px-2 text-white">Calendar</a></li>
             <li><a href="#" class="nav-link px-2 text-white">Photos</a></li>
             <li><a href="#" class="nav-link px-2 text-white">ContactUs</a></li>
           </ul>
